# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: lint_and_pytest.yml  pyci.yml
gendiff/: build_diff.py  cli.py  diff_functions.py  loading_file.py
gendiff/formats/: json.py  plain.py  string.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff_package/: comparisons.py
tests/: fixtures.py  test_diff.py  test_format.py  test_gendiff.py
tests/fixtures/: answer.json  answer3.txt  answer_small_plain.txt  answer_stylish2.txt  big_file1.yaml  big_file2.yaml  file2.json~  small_file2.json~
