[tool.poetry]
name = "Nikita-Illarionov_gendiff"
version = "0.1.1"
description = ""
authors = ["Nikita <Nikita.Clark@yandex.ru>"]
packages = [
 { include = 'gendiff' },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
