[tool.poetry]
name = "Nikita-Illarionov_gendiff"
version = "0.1.1"
description = ""
authors = ["Nikita <Nikita.Clark@yandex.ru>"]
packages = [
 { include = 'gendiff' },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
run-gendiff = 'gendiff.scripts.gendiff:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
